# utah_housing

./: README.md  pyproject.toml
tests/: test_utah_housing.py
utah_housing/: __init__.py  fetch.py  fixed_effects_model.py  variables.py
utah_housing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
