[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utah_housing"
version = "0.1.2"
description = "Census ACS data pull and fixed effects models for Utah housing analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "numpy>=1.26",
    "statsmodels>=0.14",
    "linearmodels>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ipykernel",
    "jupyterlab",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["utah_housing*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
